✨ feat: add publication summary page
- https://c-naoki.vercel.app/assets/{venueName}

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -93,6 +93,11 @@
         "filing-date": "2023.06.19",
         "publication-date": "2025.01.07"
       }
+    },
+    "summary": {
+      "details": "Publication Details",
+      "abstract": "Abstract",
+      "resources": "Resources"
     }
   },
   "news": {
