--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -71,6 +71,10 @@
         "filing-date": "2023年6月19日",
         "publication-date": "2025年1月7日"
       }
+    },
+    "summary": {
+      "details": "論文詳細",
+      "resources": "資料"
     }
   },
   "news": {
