✨ feat: add buttons to show the abstract of papers

--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -24,6 +24,7 @@
       "TOD101": {
         "authors": ["千原 直己", "松原 靖子", "藤原 廉", "櫻井 保志"],
         "title": "動的モード分解による時系列データストリームの将来予測",
+        "abstract": "本論文では，動的モード分解を活用した大規模時系列データストリームの高速予測手法 ModeCast を提案する．ModeCast はセンサデータや，Web データなど，多種多様な時系列パターンにより構成される大規模時系列データストリームが与えられたとき，その中から潜在的なダイナミクスに基づいた重要な時系列パターンを発見することで将来予測を行う．より具体的には，このようなパターンを発見するために動的モード分解（DMD）を活用する．提案手法は，(a) 大規模データストリームの中から重要なダイナミクスを発見し，リアルタイムかつ長期的な予測を可能とする．また，(b) 様々なデータに対して予測を 行うことが可能であり，実用的である．さらに，提案手法は (c) データストリームの長さに依存せず，非常に高速である．実データを活用した実験により，提案手法が時系列データストリームの将来予測のための既存手法と比較して高精度であること，計算時間についてデータサイズに依存せず，より高速なリアルタイム予測を達成していることを明らかにした．",
         "venue": {
           "name": "情報処理学会論文誌データベース (TOD)",
           "others": "Vol. 17, No. 2, pp. 1-11, 2024年4月23日"
