--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -19,6 +19,7 @@
       "KDD2025": {
         "authors": ["Naoki Chihara", "Yasuko Matsubara", "Ren Fujiwara", "Yasushi Sakurai"],
         "title": "Modeling Time-evolving Causality over Data Streams",
+        "abstract": "Given an extensive, semi-infinite collection of multivariate co-evolving data sequences (e.g., sensor/web activity streams) whose observations influence each other, how can we discover the time-changing cause-and-effect relationships in co-evolving data streams? How efficiently can we reveal dynamical patterns that allow us to forecast future values? In this paper, we present a novel streaming method, ModePlait, which is designed for modeling such causal relationships (i.e., time-evolving causality) in multivariate co-evolving data streams and forecasting their future values. The solution relies on characteristics of the causal relationships that evolve over time in accordance with the dynamic changes of exogenous variables. ModePlait has the following properties: (a) Effective: it discovers the time-evolving causality in multivariate co-evolving data streams by detecting the transitions of distinct dynamical patterns adaptively. (b) Accurate: it enables both the discovery of time-evolving causality and the forecasting of future values in a streaming fashion. (c) Scalable: our algorithm does not depend on data stream length and thus is applicable to very large sequences. Extensive experiments on both synthetic and real-world datasets demonstrate that our proposed model outperforms state-of-the-art methods in terms of discovering the time-evolving causality as well as forecasting.",
         "venue": {
           "name": "The 31st ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD ’25)",
           "others": "Tronto, ON, Canada, August 3-7, 2025 (acceptance rate: 19%)"
@@ -40,6 +41,7 @@
       "TOD101": {
         "authors": ["Naoki Chihara", "Yasuko Matsubara", "Ren Fujiwara", "Yasushi Sakurai"],
         "title": "Real-time Forecasting of Time-evolving Data Streams using Dynamic Mode Decomposition",
+        "abstract": "Given a large, online stream of multiple co-evolving data sequences (e.g., sensor/web activities streams), which contains multiple distinct time-series patterns based on inherent dynamics, how do we capture important patterns and forecast future values? In this paper, we present ModeCast, an efficient and effective method for forecasting co-evolving data sequences. ModeCast exploits Dynamic Mode Decomposition (DMD) to capture time-series patterns based on inherent dynamics. Our proposed method has the following properties: (a) Effective: it captures important time-evolving patterns in data streams and enables real-time, long-range forecasting; (b) General : our model can be practically applied to various types of time-evolving data streams; (c) Scalable: our algorithm does not depend on the length of data streams and thus is applicable to very large sequences. Extensive experiments on a real dataset demonstrate that ModeCast makes long-range forecasts and consistently outperforms the best existing methods as regards accuracy, and the computational speed is sufficiently fast.",
         "venue": {
           "name": "IPSJ Transactions on Databases (TOD)",
           "others": "Vol. 17, No. 2, pp. 1-11, April 23, 2024"
@@ -49,6 +51,7 @@
       "AstronComput45": {
         "authors": ["Naoki Chihara", "Tadafumi Takata", "Yasuhiro Fujiwara", "Koki Noda", "Keisuke Toyoda", "Kaito Higuchi", "Makoto Onizuka"],
         "title": "Effective detection of variable celestial objects using machine learning-based periodic analysis",
+        "abstract": "This paper tackles the problem of effectively detecting variable celestial objects whose brightness periodically changes over time. This problem is crucial in studying the evolution and structure of the universe and elucidating physical phenomena. The method by Sesar et al. is one of the popular approaches used in detecting variable celestial objects that uses statistical data of celestial time series, such as intrinsic variability 𝜎 and 𝜒2, etc. However, since statistical data is an aggregation of celestial time series, the previous approaches do not take advantage of the periodicity, which is the inherent characteristic of variable celestial objects; it fails to find variable celestial objects effectively. To solve such a problem, we propose an approach to detecting variable celestial objects using periodic analysis. Our approach uses sparse modeling as periodic analysis since celestial time series is typically sparse and sparse modeling can effectively obtain periodicities of the celestial objects from sparse time series. By exploiting the periodicities of the celestial objects as features, we perform binary classification to estimate whether a celestial object is a variable celestial object. To show the effectiveness of our approach, we evaluated our approach using Hyper SuprimeCam (HSC) PDR2 dataset, and we confirmed that AUC of our approach is 0.939 while AUC of the previous approach is 0.750; our approach can more effectively detect variable celestial objects.",
         "venue": {
           "name": "Astronomy and Computing",
           "others": "Vol. 45, pp. 100765, November 3, 2023"
@@ -64,7 +67,7 @@
           "name": "The 16th Forum on Data Engineering and Information Management (DEIM2024)",
           "others": "Hyogo, Japan, February 28 - March 5, 2024"
         },
-        "awards": ["Best Paper Award Runner-up", "2024 IPSJ Yamashita SIG Research Award"]
+        "awards": ["Best Paper Award Runner-up", "IPSJ Yamashita SIG Research Award"]
       },
       "DAS2024": {
         "authors": ["Aiyi Li", "Kenya Hoshimure", "Kei Tanigaki", "Yota Hatano", "Reina Nozawa", "Yuki Sakamoto", "Yuanzhou Wei", "Naoki Chihara", "Naoki Kodani"],
@@ -108,7 +111,7 @@
     "kdd2025-date": "[2024.11.17]",
     "dc1": "I have been preliminarily selected for the JSPS DC1 Research Fellowship.",
     "dc1-date": "[2024.09.27]",
-    "yamashita-award": "I have received the 2024 IPSJ Yamashita SIG Research Award.",
+    "yamashita-award": "I have received the IPSJ Yamashita SIG Research Award.",
     "yamashita-award-date": "[2024.07.31]",
     "kddpc2024": "Our paper has been accepted to the PhD Consortium at KDD2024.",
     "kddpc2024-date": "[2024.06.25]",
@@ -126,7 +129,7 @@
   "grants-awards": {
     "heading": "Grants & Awards",
     "yamashita-date": "[2024.07]",
-    "yamashita": "2024 IPSJ Yamashita SIG Research Award",
+    "yamashita": "IPSJ Yamashita SIG Research Award",
     "deim2024-date": "[2024.06]",
     "deim2024": "DEIM2024 Best Paper Award Runner-up",
     "hwip-date": "[2023.04-present]",
