--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -35,6 +35,15 @@
     },
     "domestic": {
       "heading": "国内学会",
+      "DEIM2025": {
+        "authors": ["千原 直己", "松原 靖子", "藤原 廉", "櫻井 保志"],
+        "title": "時間変化する因果関係の抽出に基づいた高速将来予測",
+        "venue": {
+          "name": "第17回データ工学と情報マネジメントに関するフォーラム (DEIM2025)",
+          "others": "福岡, 2025年2月27日~3月4日"
+        },
+        "awards": []
+      },
       "DEIM2024": {
         "authors": ["千原 直己", "松原 靖子", "藤原 廉", "櫻井 保志"],
         "title": "動的モード分解を活用した高速将来予測アルゴリズム",
