--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -42,7 +42,7 @@
           "name": "第17回データ工学と情報マネジメントに関するフォーラム (DEIM2025)",
           "others": "福岡, 2025年2月27日~3月4日"
         },
-        "awards": []
+        "awards": ["学生プレゼンテーション賞"]
       },
       "DEIM2024": {
         "authors": ["千原 直己", "松原 靖子", "藤原 廉", "櫻井 保志"],
@@ -89,6 +89,8 @@
   },
   "news": {
     "heading": "最新情報",
+    "deim2025-presentation-date": "[2025年3月4日]",
+    "deim2025-presentation": "DEIM2025において学生プレゼンテーション賞を頂きました．",
     "boost": "国立研究開発法人科学技術振興機構 (JST) の次世代AI人材育成プロジェクト (BOOST) に採択されました．",
     "boost-date": "[2025年2月20日]",
     "kdd2025": "論文がKDD2025に採択されました．",
@@ -99,7 +101,7 @@
     "yamashita-award-date": "[2024年7月31日]",
     "kddpc2024": "論文がKDD2024 PhD Consortiumに採択されました．",
     "kddpc2024-date": "[2024年6月25日]",
-    "deim2024-award": "DEIM2024優秀論文賞を頂きました．",
+    "deim2024-award": "DEIM2024において優秀論文賞を頂きました．",
     "deim2024-award-date": "[2024年6月8日]",
     "tod101": "論文が情報処理学会論文誌データベース (TOD) に採択されました．",
     "tod101-date": "[2024年1月8日]",
@@ -112,6 +114,8 @@
   },
   "grants-awards": {
     "heading": "助成金 & 受賞",
+    "deim2025-date": "[2025年3月]",
+    "deim2025": "DEIM2025 学生プレゼンテーション賞",
     "yamashita-date": "[2024年7月]",
     "yamashita": "情報処理学会 2024年度山下記念研究賞",
     "deim2024-date": "[2024年6月]",
