🐛 fix: minor changes of `GrantsAwards`
- delete redundant tag
- correct condition in GrantsAwards

--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -114,8 +114,8 @@
   },
   "grants-awards": {
     "heading": "助成金 & 受賞",
-    "deim2025-date": "[2025年3月]",
-    "deim2025": "DEIM2025 学生プレゼンテーション賞",
+    "deim2025-presentation-date": "[2025年3月]",
+    "deim2025-presentation": "DEIM2025 学生プレゼンテーション賞",
     "yamashita-date": "[2024年7月]",
     "yamashita": "情報処理学会 2024年度山下記念研究賞",
     "deim2024-date": "[2024年6月]",
