--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -138,8 +138,8 @@
   },
   "grants-awards": {
     "heading": "Grants & Awards",
-    "deim2025-date": "[2025.03]",
-    "deim2025": "DEIM2025 Student Presentation Award",
+    "deim2025-presentation-date": "[2025.03]",
+    "deim2025-presentation": "DEIM2025 Student Presentation Award",
     "yamashita-date": "[2024.07]",
     "yamashita": "IPSJ Yamashita SIG Research Award",
     "deim2024-date": "[2024.06]",
