📝 docs: update content json files

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -113,6 +113,10 @@
   },
   "news": {
     "heading": "News",
+    "msc-date": "[2025.03.25]",
+    "msc": "I have completed my M.Sc. degree at Osaka University.",
+    "ist-award-date": "[2025.03.07]",
+    "ist-award": "I have received the Osaka University Graduate School of Information Science and Technology Award.",
     "deim2025-presentation-date": "[2025.03.04]",
     "deim2025-presentation": "I have received the DEIM2025 Student Presentation Award.",
     "boost": "I have been selected for the JST BOOST Program.",
@@ -131,13 +135,15 @@
     "tod101-date": "[2024.01.08]",
     "AstronComput45": "Our paper has been accepted to Astronomy and Computing.",
     "AstronComput45-date": "[2023.10.25]",
-    "bachelor-graduate": "I have completed my B.Sc. degree at Osaka University.",
-    "bachelor-graduate-date": "[2023.03.23]",
+    "bsc": "I have completed my B.Sc. degree at Osaka University.",
+    "bsc-date": "[2023.03.23]",
     "hwip-passing": "I have passed the selection exam for the Humanware Innovation Program.",
     "hwip-passing-date": "[2023.03.14]"
   },
   "grants-awards": {
     "heading": "Grants & Awards",
+    "ist-date": "[2025.03]",
+    "ist": "Osaka University Graduate School of Information Science and Technology Award",
     "deim2025-presentation-date": "[2025.03]",
     "deim2025-presentation": "DEIM2025 Student Presentation Award",
     "yamashita-date": "[2024.07]",
@@ -150,6 +156,9 @@
   },
   "experiences": {
     "heading": "Experiences",
+    "DC1-date": "2025.04-present",
+    "DC1": "Japan Society for the Promotion of Science (JSPS)",
+    "DC1-role": "Research Fellow DC1",
     "SANKEN-date": "2023.06-present",
     "SANKEN": "SANKEN, Osaka University",
     "SANKEN-role": "Project researcher",
@@ -175,7 +184,11 @@
   },
   "education": {
     "heading": "Education",
-    "Master-date": "2023.04-present",
+    "Doctor-date": "2025.04-present",
+    "Doctor": "Ph.D. in Information Science",
+    "Doctor-affiliation": "Osaka University, Osaka, Japan",
+    "Doctor-supervisor": "Supervisor: Prof. Yasushi Sakurai",
+    "Master-date": "2023.04-2025.03",
     "Master": "M.Sc. in Information Science",
     "Master-affiliation": "Osaka University, Osaka, Japan",
     "Master-thesis": "Thesis: Stream Mining Time-evolving Causality for Time Series Forecasting",
