--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -89,6 +89,10 @@
   },
   "news": {
     "heading": "最新情報",
+    "msc-date": "[2025年3月25日]",
+    "msc": "大阪大学で修士を取得しました．",
+    "ist-award-date": "[2025年3月7日]",
+    "ist-award": "大阪大学情報科学研究科賞を頂きました．",
     "deim2025-presentation-date": "[2025年3月4日]",
     "deim2025-presentation": "DEIM2025において学生プレゼンテーション賞を頂きました．",
     "boost": "国立研究開発法人科学技術振興機構 (JST) の次世代AI人材育成プロジェクト (BOOST) に採択されました．",
@@ -107,13 +111,15 @@
     "tod101-date": "[2024年1月8日]",
     "AstronComput45": "論文がAstronomy and Computingに採択されました．",
     "AstronComput45-date": "[2023年10月25日]",
-    "bachelor-graduate": "大阪大学で学士を取得しました．",
-    "bachelor-graduate-date": "[2023年3月23日]",
+    "bsc": "大阪大学で学士を取得しました．",
+    "bsc-date": "[2023年3月23日]",
     "hwip-passing": "ヒューマンウェアイノベーション博士課程プログラムの選抜試験に合格しました．",
     "hwip-passing-date": "[2023年3月14日]"
   },
   "grants-awards": {
     "heading": "助成金 & 受賞",
+    "ist-date": "[2025年3月]",
+    "ist": "大阪大学情報科学研究科賞",
     "deim2025-presentation-date": "[2025年3月]",
     "deim2025-presentation": "DEIM2025 学生プレゼンテーション賞",
     "yamashita-date": "[2024年7月]",
@@ -126,6 +132,9 @@
   },
   "experiences": {
     "heading": "職歴",
+    "DC1-date": "2025年4月-現在",
+    "DC1": "日本学術振興会 (JSPS)",
+    "DC1-role": "特別研究員DC1",
     "SANKEN-date": "2023年6月-現在",
     "SANKEN": "大阪大学 産業科学研究所",
     "SANKEN-role": "特任研究員",
@@ -151,7 +160,11 @@
   },
   "education": {
     "heading": "学歴",
-    "Master-date": "2023年4月-現在",
+    "Doctor-date": "2025年4月-現在",
+    "Doctor": "博士（情報科学）",
+    "Doctor-affiliation": "大阪大学 情報科学研究科 情報システム工学専攻",
+    "Doctor-supervisor": "指導教員：櫻井 保志 教授",
+    "Master-date": "2023年4月-2025年3月",
     "Master": "修士（情報科学）",
     "Master-affiliation": "大阪大学 情報科学研究科 情報システム工学専攻",
     "Master-thesis": "学位論文：時系列データストリームにおける将来予測のための時間変化する因果関係の抽出",
