--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -42,7 +42,7 @@
           "name": "第17回データ工学と情報マネジメントに関するフォーラム (DEIM2025)",
           "others": "福岡, 2025年2月27日~3月4日"
         },
-        "awards": ["学生プレゼンテーション賞"]
+        "awards": ["学生プレゼンテーション賞", "優秀論文賞"]
       },
       "DEIM2024": {
         "authors": ["千原 直己", "松原 靖子", "藤原 廉", "櫻井 保志"],
@@ -89,6 +89,8 @@
   },
   "news": {
     "heading": "最新情報",
+    "deim2025-award-date": "[2025年5月20日]",
+    "deim2025-award": "DEIM2025において優秀論文賞を頂きました．",
     "msc-date": "[2025年3月25日]",
     "msc": "大阪大学で修士を取得しました．",
     "ist-award-date": "[2025年3月7日]",
@@ -118,6 +120,8 @@
   },
   "grants-awards": {
     "heading": "助成金 & 受賞",
+    "deim2025-date": "[2025年6月]",
+    "deim2025": "DEIM2025 優秀論文賞",
     "ist-date": "[2025年3月]",
     "ist": "大阪大学情報科学研究科賞",
     "deim2025-presentation-date": "[2025年3月]",
