🩹 chore: change key ordering

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -121,26 +121,26 @@
     "ist-award": "I have received the Osaka University Graduate School of Information Science and Technology Award.",
     "deim2025-presentation-date": "[2025.03.04]",
     "deim2025-presentation": "I have received the DEIM2025 Student Presentation Award.",
-    "boost": "I have been selected for the JST BOOST Program.",
     "boost-date": "[2025.02.20]",
-    "kdd2025": "Our paper has been accepted to KDD2025.",
+    "boost": "I have been selected for the JST BOOST Program.",
     "kdd2025-date": "[2024.11.17]",
-    "dc1": "I have been preliminarily selected for the JSPS DC1 Research Fellowship.",
+    "kdd2025": "Our paper has been accepted to KDD2025.",
     "dc1-date": "[2024.09.27]",
-    "yamashita-award": "I have received the IPSJ Yamashita SIG Research Award.",
+    "dc1": "I have been preliminarily selected for the JSPS DC1 Research Fellowship.",
     "yamashita-award-date": "[2024.07.31]",
-    "kddpc2024": "Our paper has been accepted to the PhD Consortium at KDD2024.",
+    "yamashita-award": "I have received the IPSJ Yamashita SIG Research Award.",
     "kddpc2024-date": "[2024.06.25]",
-    "deim2024-award": "I have received the DEIM2024 Best Paper Award Runner-up.",
+    "kddpc2024": "Our paper has been accepted to the PhD Consortium at KDD2024.",
     "deim2024-award-date": "[2024.06.08]",
-    "tod101": "Our paper has been accepted to IPSJ Transactions on Databases (TOD).",
+    "deim2024-award": "I have received the DEIM2024 Best Paper Award Runner-up.",
     "tod101-date": "[2024.01.08]",
-    "AstronComput45": "Our paper has been accepted to Astronomy and Computing.",
+    "tod101": "Our paper has been accepted to IPSJ Transactions on Databases (TOD).",
     "AstronComput45-date": "[2023.10.25]",
-    "bsc": "I have completed my B.Sc. degree at Osaka University.",
+    "AstronComput45": "Our paper has been accepted to Astronomy and Computing.",
     "bsc-date": "[2023.03.23]",
-    "hwip-passing": "I have passed the selection exam for the Humanware Innovation Program.",
-    "hwip-passing-date": "[2023.03.14]"
+    "bsc": "I have completed my B.Sc. degree at Osaka University.",
+    "hwip-passing-date": "[2023.03.14]",
+    "hwip-passing": "I have passed the selection exam for the Humanware Innovation Program."
   },
   "grants-awards": {
     "heading": "Grants & Awards",
