--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -97,26 +97,26 @@
     "ist-award": "大阪大学情報科学研究科賞を頂きました．",
     "deim2025-presentation-date": "[2025年3月4日]",
     "deim2025-presentation": "DEIM2025において学生プレゼンテーション賞を頂きました．",
+  "boost-date": "[2025年2月20日]",
     "boost": "国立研究開発法人科学技術振興機構 (JST) の次世代AI人材育成プロジェクト (BOOST) に採択されました．",
-    "boost-date": "[2025年2月20日]",
-    "kdd2025": "論文がKDD2025に採択されました．",
     "kdd2025-date": "[2024年11月17日]",
-    "dc1": "日本学術振興会 (JSPS) の特別研究員DC1に採用内定を頂きました．",
+    "kdd2025": "論文がKDD2025に採択されました．",
     "dc1-date": "[2024年9月27日]",
-    "yamashita-award": "情報処理学会の2024年度山下記念研究賞を頂きました．",
+    "dc1": "日本学術振興会 (JSPS) の特別研究員DC1に採用内定を頂きました．",
     "yamashita-award-date": "[2024年7月31日]",
-    "kddpc2024": "論文がKDD2024 PhD Consortiumに採択されました．",
+    "yamashita-award": "情報処理学会の2024年度山下記念研究賞を頂きました．",
     "kddpc2024-date": "[2024年6月25日]",
-    "deim2024-award": "DEIM2024において優秀論文賞を頂きました．",
+    "kddpc2024": "論文がKDD2024 PhD Consortiumに採択されました．",
     "deim2024-award-date": "[2024年6月8日]",
-    "tod101": "論文が情報処理学会論文誌データベース (TOD) に採択されました．",
+    "deim2024-award": "DEIM2024において優秀論文賞を頂きました．",
     "tod101-date": "[2024年1月8日]",
-    "AstronComput45": "論文がAstronomy and Computingに採択されました．",
+    "tod101": "論文が情報処理学会論文誌データベース (TOD) に採択されました．",
     "AstronComput45-date": "[2023年10月25日]",
-    "bsc": "大阪大学で学士を取得しました．",
+    "AstronComput45": "論文がAstronomy and Computingに採択されました．",
     "bsc-date": "[2023年3月23日]",
-    "hwip-passing": "ヒューマンウェアイノベーション博士課程プログラムの選抜試験に合格しました．",
-    "hwip-passing-date": "[2023年3月14日]"
+    "bsc": "大阪大学で学士を取得しました．",
+    "hwip-passing-date": "[2023年3月14日]",
+    "hwip-passing": "ヒューマンウェアイノベーション博士課程プログラム (HWIP) の選抜試験に合格しました．"
   },
   "grants-awards": {
     "heading": "助成金 & 受賞",
