📝 docs: minor update

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -212,7 +212,7 @@
     "pigicon2023": "Second-place award at the 2nd Recruit Programming Contest (PIGICON2023)",
     "pakdd2023-date": "[2023.05]",
     "pakdd2023": "Participated in PAKDD2023 as volunteer",
-    "pandacco-date": "[2023.04-present]",
+    "pandacco-date": "[2023.04-2025.03]",
     "pandacco": "Developed online reservation app for local bakery (Pandacco) at Google Developer Student Clubs (GDSC)"
   },
   "contact": {
