--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -188,7 +188,7 @@
     "pigicon2023": "第2回リクルートプログラミングコンテスト (PIGICON2023) 準優勝",
     "pakdd2023-date": "[2023年5月]",
     "pakdd2023": "PAKDD2023に運営ボランティアとして参加",
-    "pandacco-date": "[2023年3月-現在]",
+    "pandacco-date": "[2023年4月-2025年3月]",
     "pandacco": "GDSCの地元のパン屋 (パンダッコ) 用予約アプリの開発チームに所属"
   },
   "contact": {
