📝 docs: add award and misc

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -155,6 +155,8 @@
     "deim2024-date": "[2024.06]",
     "deim2024": "DEIM2024 Best Paper Award Runner-up",
     "hwip-date": "[2023.04-present]",
+    "pakdd2023-volunteer-date": "[2023.05]",
+    "pakdd2023-volunteer": "PAKDD2023 Volunteer Award",
     "hwip": "Osaka University Humanware Innovation Program",
     "hwip-content1": "Research/Travel expenses and Grant-type scholarship"
   },
@@ -208,6 +210,8 @@
   },
   "misc": {
     "heading": "Miscellaneous",
+    "sakurai-interview-date": "[2025.03]",
+    "sakurai-interview": "Brief interview by Sakurai & Matsubara Lab.",
     "pigicon2023-date": "[2023.12]",
     "pigicon2023": "Second-place award at the 2nd Recruit Programming Contest (PIGICON2023)",
     "pakdd2023-date": "[2023.05]",
