--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -130,6 +130,8 @@
     "yamashita": "情報処理学会 2024年度山下記念研究賞",
     "deim2024-date": "[2024年6月]",
     "deim2024": "DEIM2024 優秀論文賞",
+    "pakdd2023-volunteer-date": "[2023年5月]",
+    "pakdd2023-volunteer": "PAKDD2023 Volunteer Award",
     "hwip-date": "[2023年4月-現在]",
     "hwip": "ヒューマンウェアイノベーション博士課程プログラム",
     "hwip-content1": "研究活動経費、国内出張旅費、給付型奨学金 etc."
@@ -184,12 +186,14 @@
   },
   "misc": {
     "heading": "その他",
+    "sakurai-interview-date": "[2025年3月]",
+    "sakurai-interview": "櫻井・松原研究室のインタビュー記事",
     "pigicon2023-date": "[2023年12月]",
     "pigicon2023": "第2回リクルートプログラミングコンテスト (PIGICON2023) 準優勝",
     "pakdd2023-date": "[2023年5月]",
     "pakdd2023": "PAKDD2023に運営ボランティアとして参加",
     "pandacco-date": "[2023年4月-2025年3月]",
-    "pandacco": "GDSCの地元のパン屋 (パンダッコ) 用予約アプリの開発チームに所属"
+    "pandacco": "GDSCにて地元のパン屋 (パンダッコ) 用予約アプリの開発"
   },
   "contact": {
     "heading": "お問い合わせ",
