📝 docs: update biography

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,7 +1,7 @@
 {
   "name": "Naoki Chihara",
   "title": "Home",
-  "profile-text": "I am a second-year M.Sc. student at Osaka University, Japan and am project researcher at SANKEN, Osaka University. In a nutshell, I am interested in data mining of time series data. Specifically, my research topics are (RQ1) Stream processing and (RQ2) Causality. I am fortunate to be advised by <link_yasushi>Prof. Yasushi Sakurai</link_yasushi> and <link_yasuko>Prof. Yasuko Matsubara</link_yasuko> at SANKEN. I recieved my B.Sc. degree from Osaka University advised by <link_makoto>Prof. Makoto Onizuka</link_makoto> in March, 2023. I am participating in <link_hwip>Humanware Innovation Program</link_hwip> to deepen my knowledge in other fields.",
+  "profile-text": "I am a first-year Ph.d. student at The University of Osaka, Japan and am a specially appointed researcher at SANKEN. In a nutshell, I am interested in data mining of time series data. Specifically, my research topics are (RQ1) Stream processing and (RQ2) Causality. I am fortunate to be advised by <link_yasushi>Prof. Yasushi Sakurai</link_yasushi> and <link_yasuko>Prof. Yasuko Matsubara</link_yasuko> at SANKEN. I received my B.Sc. and M.Sc. degrees from The University of Osaka advised by <link_makoto>Prof. Makoto Onizuka</link_makoto> and <link_yasushi>Prof. Yasushi Sakurai</link_yasushi> in March, 2023 and March, 2025, respectively. I am participating in <link_hwip>Humanware Innovation Program</link_hwip> to deepen my knowledge in other fields.",
   "cv": "Download my CV <link_cv>here</link_cv>",
   "blog": {
     "heading": "Blog",
@@ -166,14 +166,14 @@
     "DC1": "Japan Society for the Promotion of Science (JSPS)",
     "DC1-role": "Research Fellow DC1",
     "SANKEN-date": "2023.06-present",
-    "SANKEN": "SANKEN, Osaka University",
+    "SANKEN": "SANKEN, The University of Osaka",
     "SANKEN-role": "Project researcher",
     "TA-date": "2023.04-2023.09",
-    "TA": "School of Engineering, Osaka University",
+    "TA": "School of Engineering, The University of Osaka",
     "TA-role": "Teaching Assistant",
     "TA-content1": "Lessons: Exercises in Mathematical Analysis",
     "IST-date": "2021.06-2023.03",
-    "IST": "Graduate School of Information Science and Technology, Osaka University",
+    "IST": "Graduate School of Information Science and Technology, The University of Osaka",
     "IST-role": "Assistant in the detection of variable celestial objects",
     "nagase-date": "2020.09-2023.03",
     "nagase": "Nagase Co., Ltd.",
@@ -184,7 +184,7 @@
     "laboratory": "Sakurai & Matsubara Lab.",
     "SANKEN": "The Institute of Scientific and Industrial Research (SANKEN)",
     "graduate": "Graduate School of Information Science and Technology",
-    "university": "Osaka University",
+    "university": "The University of Osaka",
     "address": "Mihogaoka 8-1, Ibaraki, Osaka 567-0047, Japan",
     "email": "naoki88[at]sanken.osaka-u.ac.jp"
   },
@@ -192,16 +192,16 @@
     "heading": "Education",
     "Doctor-date": "2025.04-present",
     "Doctor": "Ph.D. in Information Science",
-    "Doctor-affiliation": "Osaka University, Osaka, Japan",
+    "Doctor-affiliation": "The University of Osaka, Osaka, Japan",
     "Doctor-supervisor": "Supervisor: Prof. Yasushi Sakurai",
     "Master-date": "2023.04-2025.03",
     "Master": "M.Sc. in Information Science",
-    "Master-affiliation": "Osaka University, Osaka, Japan",
+    "Master-affiliation": "The University of Osaka, Osaka, Japan",
     "Master-thesis": "Thesis: Stream Mining Time-evolving Causality for Time Series Forecasting",
     "Master-supervisor": "Supervisor: Prof. Yasushi Sakurai",
     "Bachelor-date": "2019.04-2023.03",
     "Bachelor": "B.Sc. in Engineering",
-    "Bachelor-affiliation": "Osaka University, Osaka, Japan",
+    "Bachelor-affiliation": "The University of Osaka, Osaka, Japan",
     "Bachelor-thesis": "Thesis: Detection of Variable Celestial Objects using Machine Learning-based Periodic Analysis and Domain Knowledge",
     "Bachelor-supervisor": "Supervisor: Prof. Makoto Onizuka",
     "secondary-date": "2016.04-2019.03",
