✨ feat: implement search function prototype

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -231,5 +231,12 @@
     "error": "An error occurred while sending your message.",
     "empty-error": "Please fill out all fields.",
     "email-error": "Please enter a valid email address."
+  },
+  "search": {
+    "section": {
+      "home": "Home",
+      "blog": "Blog",
+      "publications": "Publications"
+    }
   }
 }
