--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -233,9 +233,20 @@
     "email-error": "Please enter a valid email address."
   },
   "search": {
+    "heading": "Search",
+    "search": "Search box",
+    "placeholder": "Enter keywords",
+    "resultsFound": "Found {{count}} results",
+    "noResults": "No results found.",
     "section": {
       "home": "Home",
       "blog": "Blog",
+      "publications": "Publications"
+    },
+    "pages": {
+      "home": "Home",
+      "blog": "Blog",
+      "book": "Book",
       "publications": "Publications"
     }
   }
