📝 docs: add misc

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -210,6 +210,8 @@
   },
   "misc": {
     "heading": "Miscellaneous",
+    "zennhack-date": "[2025.06]",
+    "zennhack": "Participated in the 2nd AI Agent Hackathon with Google Cloud",
     "sakurai-interview-date": "[2025.03]",
     "sakurai-interview": "Brief interview by Sakurai & Matsubara Lab.",
     "pigicon2023-date": "[2023.12]",
