📝 docs: update misc sentence

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -211,7 +211,7 @@
   "misc": {
     "heading": "Miscellaneous",
     "zennhack-date": "[2025.06]",
-    "zennhack": "Participated in the 2nd AI Agent Hackathon with Google Cloud",
+    "zennhack": "Passed the first round of the 2nd AI Agent Hackathon with Google Cloud (rate: 18.7%, 32/171)",
     "sakurai-interview-date": "[2025.03]",
     "sakurai-interview": "Brief interview by Sakurai & Matsubara Lab.",
     "pigicon2023-date": "[2023.12]",
