--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -187,7 +187,7 @@
   "misc": {
     "heading": "その他",
     "zennhack-date": "[2025年6月]",
-    "zennhack": "第2回 AI Agent Hackathon with Google Cloud に参加",
+    "zennhack": "第2回 AI Agent Hackathon with Google Cloud 一次審査通過 (通過率: 18.7%, 32/171)",
     "sakurai-interview-date": "[2025年3月]",
     "sakurai-interview": "櫻井・松原研究室のインタビュー記事",
     "pigicon2023-date": "[2023年12月]",
