📝 docs: add grant

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -113,6 +113,8 @@
   },
   "news": {
     "heading": "News",
+    "jasso-date": "[2025.07.29]",
+    "jasso": "I have been granted a full exemption from return of the Japan Student Services Organization (JASSO) scholarship.",
     "deim2025-award-date": "[2025.05.20]",
     "deim2025-award": "I have received the DEIM2025 Best Paper Award Runner-up.",
     "msc-date": "[2025.03.25]",
@@ -144,6 +146,8 @@
   },
   "grants-awards": {
     "heading": "Grants & Awards",
+    "jasso-date": "[2025.07]",
+    "jasso": "JASSO Scholarship, Exemption from Return for Particularly Outstanding Achievement (Full Amount)",
     "deim2025-date": "[2025.06]",
     "deim2025": "DEIM2025 Best Paper Award Runner-up",
     "ist-date": "[2025.03]",
