--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -89,6 +89,8 @@
   },
   "news": {
     "heading": "最新情報",
+    "jasso-date": "[2025年7月29日]",
+    "jasso": "日本学生支援機構 (JASSO) の第一種奨学金の全額免除に認定して頂きました．",
     "deim2025-award-date": "[2025年5月20日]",
     "deim2025-award": "DEIM2025において優秀論文賞を頂きました．",
     "msc-date": "[2025年3月25日]",
@@ -120,6 +122,8 @@
   },
   "grants-awards": {
     "heading": "助成金 & 受賞",
+    "jasso-date": "[2025年7月]",
+    "jasso": "日本学生支援機構 特に優れた業績による返還免除（全額免除）",
     "deim2025-date": "[2025年6月]",
     "deim2025": "DEIM2025 優秀論文賞",
     "ist-date": "[2025年3月]",
