📝 docs: add new experience

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -175,6 +175,9 @@
   },
   "experiences": {
     "heading": "Experiences",
+    "ailab-date": "2025.09-2025.10",
+    "ailab": "AI Lab, CyberAgent",
+    "ailab-role": "Research Internship",
     "DC1-date": "2025.04-present",
     "DC1": "Japan Society for the Promotion of Science (JSPS)",
     "DC1-role": "Research Fellow DC1",
