--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -163,6 +163,9 @@
   },
   "experiences": {
     "heading": "職歴",
+    "ailab-date": "2025年9月-2025年10月",
+    "ailab": "株式会社サイバーエージェント AI Lab",
+    "ailab-role": "リサーチインターンシップ",
     "DC1-date": "2025年4月-現在",
     "DC1": "日本学術振興会 (JSPS)",
     "DC1-role": "特別研究員DC1",
