📝 docs: add news

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -113,6 +113,8 @@
   },
   "news": {
     "heading": "News",
+    "tod109-date": "[2025.10.29]",
+    "tod109": "Our paper has been accepted to IPSJ Transactions on Databases (TOD).",
     "jasso-date": "[2025.07.29]",
     "jasso": "I have been granted a full exemption from return of the Japan Student Services Organization (JASSO) scholarship.",
     "deim2025-award-date": "[2025.05.20]",
