--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -89,6 +89,8 @@
   },
   "news": {
     "heading": "最新情報",
+    "tod109-date": "[2025年10月29日]",
+    "tod109": "論文が情報処理学会論文誌データベース (TOD) に採択されました．",
     "jasso-date": "[2025年7月29日]",
     "jasso": "日本学生支援機構 (JASSO) の第一種奨学金の全額免除に認定して頂きました．",
     "deim2025-award-date": "[2025年5月20日]",
