--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -35,6 +35,15 @@
     },
     "domestic": {
       "heading": "国内学会",
+      "IBIS2025": {
+        "authors": ["千原 直己", "松原 靖子", "藤原 廉", "櫻井 保志"],
+        "title": "時系列データストリームにおける時間変化する因果関係の抽出",
+        "venue": {
+          "name": "第28回情報論的学習理論ワークショップ (IBIS2025)",
+          "others": "沖縄, 2025年11月12日~15日"
+        },
+        "awards": []
+      },
       "DEIM2025": {
         "authors": ["千原 直己", "松原 靖子", "藤原 廉", "櫻井 保志"],
         "title": "時間変化する因果関係の抽出に基づいた高速将来予測",
